--- a/android-crmtab/app/src/main/res/layout/activity_create_crv.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_create_crv.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#ebebeb"
-    tools:context="pds.isintheair.fr.crm_tab.CreateCrvActivity">
+    tools:context="pds.isintheair.fr.crm_tab.crv.CreateCrvActivity">
 
     <ScrollView
         android:layout_width="fill_parent"
