--- a/android-crmtab/app/src/main/res/layout/activity_login.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Suivant"
-
+        android:onClick="login"
         android:layout_gravity="center_horizontal" />
 
 
