--- a/android-crmtab/app/src/main/res/values/dimens.xml
+++ b/android-crmtab/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="create_customer_min_width_edit_text">128dp</dimen>
 </resources>
