--- a/android-crmtab/app/src/main/res/layout/activity_create_crv.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_create_crv.xml
@@ -277,7 +277,7 @@
                     card_view:cardCornerRadius="4dp"
                     android:layout_width="350dp"
                     android:layout_height="200dp"
-                    android:visibility="invisible"
+                    android:visibility="visible"
 
                     >
 
@@ -292,81 +292,30 @@
                         android:layout_marginLeft="20dp"
                         android:layout_width="30dp"
                         android:layout_height="25dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="20dp"
                         android:background="@drawable/list"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
+                        android:enabled="false"
+                        android:onClick="launchInputDialogProduct"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
+                        android:layout_marginTop="20dp"
                         android:id="@+id/lblProduct"
                         android:layout_marginLeft="60dp"
                         android:layout_toRightOf="@+id/btnList"
                         android:textSize="20sp"
                         android:text="Produit(s) présenté(s)"
                         />
-                    <ScrollView
-                        android:layout_marginTop="30dp"
-                        android:layout_width="wrap_content"
+                    <ListView
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp">
+                        android:id="@+id/lstProducts"
+                        android:layout_marginTop="70dp">
 
-                        <LinearLayout
-
-                            android:layout_width="fill_parent"
-                            android:layout_height="fill_parent"
-                            android:orientation="vertical">
-
-                            <CheckBox
-                                android:layout_marginTop="15dp"
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:text="product 1"/>
-                            <CheckBox
-                            android:layout_marginTop="5dp"
-                            android:layout_width="300dp"
-                            android:layout_height="wrap_content"
-                            android:text="product 2"/>
-                            <CheckBox
-                                android:layout_marginTop="5dp"
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:text="product 3"/>
-                            <CheckBox
-                                android:layout_marginTop="5dp"
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:text="product 4"/>
-                            <CheckBox
-                                android:layout_marginTop="5dp"
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:text="product 5"/>
-                            <CheckBox
-                                android:layout_marginTop="5dp"
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:text="product 6"/>
-                            <CheckBox
-                                android:layout_marginTop="5dp"
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:text="product 7"/>
-                            <CheckBox
-                                android:layout_marginTop="5dp"
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:text="product 8"/>
-                            <CheckBox
-                                android:layout_marginTop="5dp"
-                                android:layout_width="300dp"
-                                android:layout_height="wrap_content"
-                                android:text="product 9"/>
-
-                        </LinearLayout>
-                    </ScrollView>
+                    </ListView>
                 </android.support.v7.widget.CardView>
 
 
