--- a/android-crmtab/app/src/main/res/layout/activity_crudcustomer.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_crudcustomer.xml
@@ -8,7 +8,8 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        app:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
+        android:background="@color/colorPrimaryDark"
+        app:theme="@style/AppTheme.AppBarOverlay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -17,8 +18,7 @@
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/create_customer_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical"/>
 
 </LinearLayout>
