--- a/android-crmtab/app/src/main/res/layout/fragment_create_he.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_create_he.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:gravity="center"
-    tools:context="admin.referentiel.client.create.he.fragment.CreateHCFragment"
+    tools:context=".admin.referentiel.client.create.he.fragment.CreateHCFragment"
     android:orientation="vertical">
 
 
