--- a/android-crmtab/app/src/main/res/layout/fragment_customer_list.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_customer_list.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="admin.referentiel.client.create.he.fragment.ListCustomerFragment"
+    android:name="pds.isintheair.fr.crm_tab.client.create.he.fragment.ListCustomerFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="admin.referentiel.client.create.he.fragment.ListCustomerFragment"
+    tools:context=".admin.referentiel.client.create.he.fragment.ListCustomerFragment"
     tools:listitem="@layout/fragment_customer" />
