--- a/android-crmtab/app/src/main/res/layout/add_log_fragment.xml
+++ b/android-crmtab/app/src/main/res/layout/add_log_fragment.xml
@@ -151,13 +151,24 @@
                     android:layout_height="match_parent"
                     android:textColor="#372c24"
                     android:text="@string/textviewcommentaire"/>
-                <EditText android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:background="#f3f3f3"
-                    android:layout_marginTop="5dip"
-                    android:layout_marginBottom="20dip"
-                    android:paddingLeft="5dp"
-                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                    <EditText android:layout_width="600dp"
+                        android:layout_height="100dp"
+                        android:background="#f3f3f3"
+                        android:layout_marginTop="5dip"
+                        android:layout_marginBottom="20dip"
+                        android:paddingLeft="5dp"
+                        />
+                    <Button
+
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:id="@+id/btnMic"
+                        android:background="@drawable/mic1"/>
+                </LinearLayout>
 
 
                 <Button android:layout_width="190dp"
