--- a/android-crmtab/app/src/main/res/layout/dialogbox_layout.xml
+++ b/android-crmtab/app/src/main/res/layout/dialogbox_layout.xml
@@ -1,36 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="300dp"
+    android:layout_height="800dp"
     android:background="#efefef"
     android:gravity="center"
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/editText1"
+        android:id="@+id/popupTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10" >
-
         <requestFocus />
     </TextView>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" android:orientation="horizontal">
+    <Button
+        android:id="@+id/oui"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Oui" />
 
     <Button
-        android:id="@+id/button1"
-        android:layout_width="fill_parent"
+        android:id="@+id/non"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Submit" />
+        android:text="Non" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="fill_parent"
+        android:id="@+id/plustard"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Submit" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Submit" />
+        android:text="Plus Tard" />
+</LinearLayout>
 
 </LinearLayout>
