--- a/android-crmtab/app/src/main/res/layout/activity_start_call_register.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_start_call_register.xml
@@ -30,6 +30,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_dialog_email"
-        android:onClick="go"/>
+        android:onClick="goo"/>
 
 </android.support.design.widget.CoordinatorLayout>
