added visit report preformatted message activity

--- a/android-crmtab/app/src/main/res/layout/msg_layout.xml
+++ b/android-crmtab/app/src/main/res/layout/msg_layout.xml
@@ -22,6 +22,7 @@
         android:layout_height="50dp"
         android:id="@+id/btnAddMessage"
         android:layout_marginLeft="150dp"
+        android:onClick="launchPreformattedMessageActivity"
         android:background="@android:drawable/ic_input_add"/>
 </LinearLayout>
 
