--- a/android-crmtab/app/src/main/res/layout/activity_call_log_main.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_call_log_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".registercall.PopUpActivity">
+    tools:context=".registercall.Views.registeracall.RegisterCallActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_call_log_main" />
+    <include layout="@layout/register_call_container" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
