--- a/android-crmtab/app/src/main/res/layout/callloglist_container.xml
+++ b/android-crmtab/app/src/main/res/layout/callloglist_container.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
     android:name="pds.isintheair.fr.crm_tab.registercall.DisplayACallFragment"
-    android:layout_width="600dp"
-    android:layout_height="800dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".registercall.Views.displaycalls.DisplayCallLogFragment"
-    tools:listitem="@layout/callloglist_container" />
+    tools:listitem="@layout/item_calllog_fragment" />
