--- a/android-crmtab/app/src/main/res/layout/item_calllog_fragment.xml
+++ b/android-crmtab/app/src/main/res/layout/item_calllog_fragment.xml
@@ -4,17 +4,38 @@ android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:orientation="horizontal">
 
+    <TextView
+        android:id="@+id/id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem" />
+
 <TextView
-    android:id="@+id/id"
+    android:id="@+id/showdate"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/text_margin"
     android:textAppearance="?attr/textAppearanceListItem" />
 
 <TextView
-    android:id="@+id/content"
+    android:id="@+id/showcontact"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/text_margin"
     android:textAppearance="?attr/textAppearanceListItem" />
+
+    <TextView
+        android:id="@+id/showclient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem" />
+
+    <TextView
+        android:id="@+id/showsubject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem" />
 </LinearLayout>
