--- a/android-crmtab/app/src/main/res/layout/start_call_register_activity.xml
+++ b/android-crmtab/app/src/main/res/layout/start_call_register_activity.xml
@@ -24,12 +24,22 @@
     <include layout="@layout/content_start_call_register" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+    android:id="@+id/fab"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom|center"
+    android:layout_margin="@dimen/fab_margin"
+    android:src="@android:drawable/ic_dialog_email"
+    android:onClick="goo"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/showlist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email"
-        android:onClick="goo"/>
+        android:src="@android:drawable/ic_menu_view"
+        android:onClick="go"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
