--- a/android-crmtab/app/src/main/res/layout/fragment_customer_list.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_customer_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".admin.referentiel.client.create.he.fragment.ListCustomerFragment"
+    tools:context=".admin.referentiel.client.fragment.ListCustomerFragment"
     tools:listitem="@layout/fragment_customer" />
