--- a/android-crmtab/app/src/main/res/layout/displaycalls_container.xml
+++ b/android-crmtab/app/src/main/res/layout/displaycalls_container.xml
@@ -1,18 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="#acacac"
-tools:context="pds.isintheair.fr.crm_tab.registercall.Views.displaycalls.LaunchDisplayLogFragment">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#dcdbdb"
 
+    >
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:background="#ff0101"
+
+    >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Mes comptes rendus d'appel"
+        android:textAlignment="center"/>
 
     <FrameLayout
         android:id="@+id/launch_display_fragment_container"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="800dp"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:background="#ffffff"
         >
     </FrameLayout>
+
+</LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
