--- a/android-crmtab/app/src/main/res/layout/fragment_customer_adapter.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_customer_adapter.xml
@@ -7,8 +7,10 @@
         android:id="@+id/fragment_customer_adapter_name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/black_overlay"
         android:paddingLeft="15dp"
-        android:textSize="12dp" />
+        android:textSize="40dp" />
 
 
 </LinearLayout>
