--- a/android-crmtab/app/src/main/res/layout/fragment_detail_hc.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_detail_hc.xml
@@ -4,24 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context="pds.isintheair.fr.crm_tab.admin.referentiel.client.display.hc.fragment.DetailHCFragment">
 
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/create_customer_cartview_marge"
         android:layout_marginRight="@dimen/create_customer_cartview_marge"
-        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginTop="10dp"
         >
         <LinearLayout
-            android:layout_marginTop="@dimen/detail_hc_margin_top"
-            android:layout_marginLeft="20dp"
-            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -29,6 +27,28 @@
                 android:textStyle="bold"
                 android:textSize="40dp"
                 android:text="@string/display_hc_fragment_title_textview" />
+
+        </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/create_customer_cartview_marge"
+        android:layout_marginRight="@dimen/create_customer_cartview_marge"
+        android:layout_marginTop="10dp"
+        app:contentPaddingBottom="50dp"
+        >
+
+        <LinearLayout
+            android:layout_marginLeft="20dp"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+
 
             <LinearLayout
                 android:layout_marginTop="30dp"
@@ -335,13 +355,21 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_marginTop="@dimen/detail_hc_margin_top"
+            android:orientation="vertical"
+            android:layout_marginLeft="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
             <org.osmdroid.views.MapView android:id="@+id/detail_hc_fragment_map"
                 android:layout_marginTop="@dimen/detail_hc_margin_top"
-                android:layout_width="500dp"
-                android:layout_height="250dp"
+                android:layout_width="600dp"
+                android:layout_height="400dp"
                 android:layout_gravity="center_horizontal"
                 />
 
+            </LinearLayout>
 
         </LinearLayout>
 
