--- a/android-crmtab/app/src/main/res/layout/fragment_detail_hc.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_detail_hc.xml
@@ -6,7 +6,7 @@
     android:background="@color/colorPrimary"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="pds.isintheair.fr.crm_tab.admin.referentiel.client.display.hc.fragment.DetailHCFragment">
+    tools:context="pds.isintheair.fr.crmtab.admin.referentiel.client.display.hc.fragment.DetailHCFragment">
 
 
     <android.support.v7.widget.CardView
