--- a/android-crmtab/app/src/main/res/layout/activity_login.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_login.xml
@@ -29,26 +29,27 @@
         android:textColor="#134b01" />
 
     <EditText
-        android:id="@+id/txtUsername"
-        android:layout_marginTop="50dp"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="user name"
-        android:layout_gravity="center_horizontal"
-        android:ems="10"
-        />
-
-    <EditText
         android:id="@+id/txtPhone"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:inputType="phone"
         android:hint="phone"
         android:layout_gravity="center_horizontal"
         android:ems="10"
-         />
+        />
+
+    <EditText
+        android:id="@+id/txtMdp"
+        android:layout_marginTop="20dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:hint="password"
+        android:layout_gravity="center_horizontal"
+        android:ems="10"
+        />
+
+
 
     <Button
         android:id="@+id/btnSuivant"
