--- a/android-crmtab/app/src/main/res/layout/log_informations_fragment.xml
+++ b/android-crmtab/app/src/main/res/layout/log_informations_fragment.xml
@@ -14,7 +14,7 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         card_view:cardCornerRadius="16dp"
-        card_view:cardBackgroundColor="#00218c"
+        card_view:cardBackgroundColor="#d1d2d4"
         android:gravity="center">
 
         <LinearLayout
@@ -55,13 +55,6 @@
                 android:orientation="vertical"
                 android:background="#e8e8e7"
                 >
-
-                <EditText
-                    android:layout_height="0dp"
-                    android:layout_width="0dp"
-                    android:id="@+id/edittextiduser"
-                    android:visibility="gone"
-                    />
 
                 <TextView android:layout_width="fill_parent"
                     android:layout_height="match_parent"
@@ -196,7 +189,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:id="@+id/vocalcomment"
-                        android:background="@drawable/mic1"/>
+                       />
                 </LinearLayout>
 
 
