--- a/android-crmtab/app/src/main/res/layout/register_call_container.xml
+++ b/android-crmtab/app/src/main/res/layout/register_call_container.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:background="#231ff2"
+        android:background="#bfbfbf"
         />
 
 </RelativeLayout>
