--- a/android-crmtab/app/src/main/res/values/dimens.xml
+++ b/android-crmtab/app/src/main/res/values/dimens.xml
@@ -10,4 +10,8 @@
     <dimen name="detail_hc_margin_top">15dp</dimen>
     <dimen name="detail_hc_size_text_text_view">15sp</dimen>
 
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
+
 </resources>
