--- a/android-crmtab/app/src/main/res/layout/pending_calls_container.xml
+++ b/android-crmtab/app/src/main/res/layout/pending_calls_container.xml
@@ -9,8 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-
-    tools:context="pds.isintheair.fr.crmtab.registercall.Views.callsnotregistered.APendingCallFragment"
-    tools:listitem="@layout/item_a_pending_call"/>
-
-
+    tools:context="pds.isintheair.fr.crmtab.registercall.Views.callsnotregistered.PendingLogsFragment"
+    tools:listitem="@layout/item_a_pending_call" />
