added lateral menu

--- a/android-crmtab/app/src/main/res/layout/item_a_pending_call.xml
+++ b/android-crmtab/app/src/main/res/layout/item_a_pending_call.xml
@@ -46,7 +46,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/yes"
-            android:background="@drawable/tick"/>
+            android:background="@drawable/tick1"/>
 
         <Button
             android:layout_width="50dp"
