--- a/android-crmtab/app/src/main/res/layout/log_informations_fragment.xml
+++ b/android-crmtab/app/src/main/res/layout/log_informations_fragment.xml
@@ -189,6 +189,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:id="@+id/vocalcomment"
+                        android:background="@drawable/mic1"
                        />
                 </LinearLayout>
 
