--- a/android-crmtab/app/src/main/res/layout/register_call_container.xml
+++ b/android-crmtab/app/src/main/res/layout/register_call_container.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:background="#bfbfbf"
         />
