--- a/android-crmtab/app/src/main/res/layout/content_main.xml
+++ b/android-crmtab/app/src/main/res/layout/content_main.xml
@@ -10,19 +10,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="pds.isintheair.fr.crmtab.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:showIn="@layout/app_bar_main"
+    android:background="#b7b2b2">
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:background="#ffffff"
+        android:background="#b7b2b2"
         >
     </FrameLayout>
 
