--- a/android-crmtab/app/src/main/res/layout/log_informations_fragment.xml
+++ b/android-crmtab/app/src/main/res/layout/log_informations_fragment.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    android:id="@+id/addlogfragment"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:foregroundGravity="center">
 
@@ -11,10 +9,17 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:layout_marginBottom="5dp"
         card_view:cardCornerRadius="16dp"
-        card_view:cardBackgroundColor="#d1d2d4"
+        card_view:cardBackgroundColor="@android:color/white"
         android:gravity="center">
+
+        <ScrollView
+
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:foregroundGravity="center">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -52,7 +57,7 @@
                 android:gravity="center_horizontal"
                 android:layout_gravity="center_horizontal"
                 android:orientation="vertical"
-                android:background="#e8e8e7"
+                android:background="#ffffff"
                 >
 
                 <TextView android:layout_width="fill_parent"
@@ -157,7 +162,7 @@
                     android:id="@+id/edittextsubject"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:background="#f3f3f3"
+                    android:textColor="#cef4ca"
                     android:layout_marginTop="5dip"
                     android:layout_marginBottom="20dip"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -178,7 +183,7 @@
                         android:id="@+id/edittextcomments"
                         android:layout_width="600dp"
                         android:layout_height="100dp"
-                        android:background="#f3f3f3"
+                        android:textColor="#cef4ca"
                         android:layout_marginTop="5dip"
                         android:layout_marginBottom="20dip"
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -208,7 +213,8 @@
 
         </LinearLayout>
 
-
+</ScrollView>
     </android.support.v7.widget.CardView>
 
-</ScrollView>
+
+    </RelativeLayout>
