resolved conflicts and added UC to the menu

--- a/android-crmtab/app/src/main/res/layout/activity_create_crv.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_create_crv.xml
@@ -446,6 +446,7 @@
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:id="@+id/btnMic"
+                            android:onClick="launchVoiceRec"
                             android:background="@drawable/mic"/>
                         <Button
                             android:layout_marginLeft="30dp"
